hphp/hack/test/typecheck/readonly/await.php.exp
File "await.php", line 24, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
